selfhost/test/typechecker/if/error_mismatch_bindingdecl.2.abra
val a: Int[] = if true { [1, 2] } else { ["3", "4"] }